# mdvault

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  cobertura.xml  codecov.yml  justfile  output.md  rustfmt.toml  tarpaulin-report.html  work_log.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml  meeting.md
crates/cli/src/: completions.rs  logging.rs  main.rs  prompt.rs
crates/cli/src/args/: area.rs  check.rs  completions_args.rs  context.rs  dashboard.rs  focus.rs  mod.rs  note.rs  project.rs  reindex.rs  rename.rs  report.rs  search.rs  task.rs  validate.rs
crates/cli/src/cmd/: area.rs  capture.rs  charts.rs  check.rs  common.rs  context.rs  doctor.rs  focus.rs  links.rs  list.rs  list_templates.rs  macro_cmd.rs  mod.rs  new.rs  orphans.rs  output.rs  project.rs  reindex.rs  rename.rs  report.rs  search.rs  stale.rs  task.rs  today.rs  validate.rs
crates/cli/src/cmd/new/: discovery.rs  hooks.rs  mod.rs  prompts.rs  writer.rs
crates/cli/src/tui/: actions.rs  app.rs  event.rs  mod.rs
crates/cli/src/tui/dashboard/: app.rs  event.rs  mod.rs  ui.rs
crates/cli/src/tui/ui/: layout.rs  mod.rs  palette.rs  preview.rs  status.rs
crates/cli/tests/: bug_template_frontmatter_vars.rs  capture_frontmatter.rs  capture_lua.rs  capture_simple.rs  date_math.rs  doctor_fail.rs  doctor_ok.rs  doctor_snapshot.rs  focus_command.rs  frontmatter_order.rs  implicit_registry_lookup.rs  list_templates_ok.rs  logging_config.rs  lua_variables.rs  lua_variables_prompting.rs  macro_lua.rs  macro_simple.rs  new_autofix.rs  new_builtin_types.rs  new_custom_typedef.rs  new_simple.rs  project_archive.rs  reindex_after_mutation.rs  task_cancel_and_project_log.rs  template_frontmatter.rs  template_lua_title.rs  variable_metadata.rs
crates/cli/tests/snapshots/: doctor_snapshot__doctor_default_profile.snap
crates/core/: Cargo.toml
crates/core/src/: ids.rs  lib.rs  paths.rs  report.rs
crates/core/src/activity/: mod.rs  rotation.rs  service.rs  types.rs
crates/core/src/captures/: discovery.rs  hooks.rs  lua_loader.rs  mod.rs  repository.rs  types.rs
crates/core/src/config/: loader.rs  types.rs
crates/core/src/context/: manager.rs  mod.rs  query.rs  query_types.rs  types.rs
crates/core/src/domain/: context.rs  creator.rs  mod.rs  services.rs  traits.rs
crates/core/src/domain/behaviors/: custom.rs  daily.rs  meeting.rs  mod.rs  project.rs  task.rs  weekly.rs  zettel.rs
crates/core/src/frontmatter/: mod.rs  modifier.rs  parser.rs  serializer.rs  types.rs
crates/core/src/index/: builder.rs  db.rs  derived.rs  mod.rs  schema.rs  search.rs  types.rs
crates/core/src/lint/: checks.rs  mod.rs  result.rs
crates/core/src/macros/: discovery.rs  lua_loader.rs  mod.rs  runner.rs  types.rs
crates/core/src/markdown_ast/: comrak.rs  editor.rs  mod.rs  types.rs
crates/core/src/rename/: detector.rs  mod.rs  types.rs  updater.rs
crates/core/src/report/: aggregation.rs  helpers.rs  mod.rs  tests.rs
crates/core/src/scripting/: bindings.rs  engine.rs  hook_runner.rs  hooks.rs  index_bindings.rs  mod.rs  selector.rs  types.rs  vault_bindings.rs  vault_context.rs
crates/core/src/templates/: discovery.rs  engine.rs  mod.rs  repository.rs
crates/core/src/types/: autofix.rs  definition.rs  discovery.rs  errors.rs  mod.rs  registry.rs  scaffolding.rs  schema.rs  validation.rs
crates/core/src/vars/: datemath.rs  mod.rs  types.rs
crates/core/src/vault/: extractor.rs  hasher.rs  mod.rs  walker.rs
crates/core/tests/: config_loader_errors.rs  config_loader_ok.rs  context_manager.rs  markdown_ast_golden.rs  markdown_ast_insert.rs  template_engine.rs  template_vars_frontmatter.rs  templates_discovery.rs
crates/core/tests/fixtures/: changelog_complex.md  changelog_simple.md
crates/core/tests/snapshots/: markdown_ast_golden__golden_changelog_insert_added_end.snap  markdown_ast_golden__golden_changelog_insert_unreleased_begin.snap  markdown_ast_golden__golden_complex_document_preserves_formatting.snap  markdown_ast_golden__golden_find_headings_complex.snap  markdown_ast_golden__golden_insert_into_changed_with_code_block.snap
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
docs/: 00_Conceptualisation.md  01_development_plan.md  03_focus_change.md  ARCHITECTURE-domain-types.md  CAPTURE.md  COVERAGE_PLAN.md  DEVELOPMENT.md  PLAN-captures-lua.md  PLAN-lua-first.md  PLAN-macros-lua.md  PLAN-v0.2.0.md  PLAN-v0.2.x-features.md  PLAN.md  architecture.md  capture.md  config.md  context-state-schema.md  development.md  getting-started.md  index.md  logging.md  lua-scripting.md  project-task-management.md  templates.md
docs/bugs/: 001-new-with-template-does-not-prompt-title.md  002-daily-weekly-future-dates-title-expression-not-evaluated.md
docs/design/: context-command.md
docs/devlogs/: phase-00.md  phase-02.md  phase-03-architecture.md  phase-04-mvp.md  tui-integration-proposal.md
docs/markadd-legacy/: 00_Conceptualisation.md  01_development_plan.md  02_revised_development_plan.md  03_focus_change.md  capture.md  index.md  macros.md
docs/markadd-legacy/devlogs/: phase-00.md  phase-01.md  phase-02.md  phase-04.md
docs/phases/: phase-00_Repo-Bootstrap-and-CI.md  phase-01.md
docs/refactoring/: 2026-01-16-new-command-refactor.md
examples/: test.md
examples/.markadd/captures/: inbox.lua  inbox.yaml  todo.lua  todo.yaml
examples/.markadd/macros/: daily-setup.lua  weekly-review.lua
packaging/homebrew/: mdvault.rb  update-formula.sh
src/: lib.rs  main.rs
