[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Agustin Valencia <aguvalenciag@gmail.com>"]
repository = "https://github.com/agustinvalencia/markadd"
homepage = "https://github.com/agustinvalencia/markadd"
readme = "README.md"
