[package]
name = "mdvault"
version = "0.1.0"
edition = "2021"
description = "Your markdown vault on the command line"

[[bin]]
name = "mdv"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.28"
dialoguer = "0.11"
mdvault-core = { path = "../core" }
ratatui = "0.29"
regex = "1.12.2"

[dev-dependencies]
assert_cmd = "2.1.1"
insta = { version = "1.43.2", features = ["glob"] }
predicates = "3.1.3"
regex = "1.12.2"
tempfile = "3.23.0"
