[package]
name = "mdvault"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing markdown vaults with structured notes, validation, and search"
license = "MIT"
repository = "https://github.com/agustinvalencia/mdvault"
homepage = "https://github.com/agustinvalencia/mdvault"
readme = "../../README.md"
keywords = ["markdown", "notes", "vault", "knowledge-base", "cli"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "mdv"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.28"
dialoguer = "0.11"
mdvault-core = { version = "0.1.0", path = "../core" }
ratatui = "0.29"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2.1.1"
insta = { version = "1.43.2", features = ["glob"] }
predicates = "3.1.3"
regex = "1.12.2"
tempfile = "3.23.0"
