[package]
name = "mdvault"
version = "0.3.5"
edition = "2021"
description = "CLI tool for managing markdown vaults with structured notes, validation, and search"
license = "MIT"
repository = "https://github.com/agustinvalencia/mdvault"
homepage = "https://github.com/agustinvalencia/mdvault"
readme = "../../README.md"
keywords = ["markdown", "notes", "vault", "knowledge-base", "cli"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "mdv"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.43", features = ["clock"] }
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
color-eyre = "0.6"
crossterm = "0.28"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
mdvault-core = { version = "0.3.5", path = "../core" }
ratatui = "0.29"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
tabled = "0.17"
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.5"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
tracing = "0.1.44"

[dev-dependencies]
assert_cmd = "2.1.2"
insta = { version = "1.46.0", features = ["glob"] }
predicates = "3.1.3"
regex = "1.12.2"
tempfile = "3.24.0"
