[package]
name = "markadd-core"
version = "0.0.1"
edition = "2024"

[lib]
name = "markadd_core"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["clock"] }
comrak = "0.35"
dirs = "6.0.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9"
shellexpand = "3.1.1"
thiserror = "2.0.17"
toml = "0.9.8"
walkdir = "2.5.0"

[dev-dependencies]
insta = "1.43"
rstest = "0.26.1"
tempfile = "3.23.0"
