[package]
name = "mdvault-core"
version = "0.1.0"
edition = "2024"
description = "Core library for mdvault - markdown vault management"

[lib]
name = "mdvault_core"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["clock", "serde"] }
comrak = "0.35"
dirs = "6.0.0"
regex = "1.12.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shellexpand = "3.1.1"
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1"
walkdir = "2.5.0"

[dev-dependencies]
insta = "1.43"
rstest = "0.26.1"
tempfile = "3.23.0"
